tests/variables/variable_bad_optional_type.june
// error: do not match

let x: bool = 3